# AXPlayerLib

./: .gitignore  README.en.md  README.md  init-android.sh  settings.gradle
MediaCore/: CMakeLists.txt
MediaCore/player/core/: AXAudioRenderer.cpp  AXClock.cpp  AXDecoder.cpp  AXDemuxer.cpp  AXPlayer.cpp  AXQueues.cpp  AXVideoRenderer.cpp
MediaCore/player/include/: AXAudioRenderer.h  AXClock.h  AXDecoder.h  AXDemuxer.h  AXErrors.h  AXLog.h  AXPlayer.h  AXQueues.h  AXVideoRenderer.h
MediaCore/player/jni/: AXMediaPlayer_jni.cpp
android/: .gitignore  av_jni_export_wrap.c  build_SoundTouch.sh  build_all_static_libs.sh  build_dav1d.sh  build_dav1d_so.sh  build_expat.sh  build_ffmpeg.sh  build_fontconfig.sh  build_freetype2.sh  build_fribidi.sh  build_harfbuzz.sh  build_iconv.sh  build_libass.sh  build_libmp3lame.sh  build_libmp3lame_so.sh  build_libsoxr.sh  build_libunibreak.sh  build_openssl.sh  build_x264.sh  build_x264_so.sh  build_zlib.sh
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/axplayer/devlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/axplayer/devlib/: AXMediaPlayer.java  IAXPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/axplayer/devlib/: ExampleUnitTest.java
axplayer-arm64/: build.gradle
axplayer-arm64/src/androidTest/java/com/axplayer/axplayer_arm64/: ExampleInstrumentedTest.java
axplayer-arm64/src/test/java/com/axplayer/axplayer_arm64/: ExampleUnitTest.java
axplayer-armv7a/: build.gradle
axplayer-armv7a/src/androidTest/java/com/axplayer/axplayer_armv7a/: ExampleInstrumentedTest.java
axplayer-armv7a/src/test/java/com/axplayer/axplayer_armv7a/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
